Adding about paragraph to home page, to help explain HMTL to uninitiated humans

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -208,6 +208,15 @@
 }
 
 
+/**
+ * About
+ */
+.about {
+    border: 1px solid $brand-color;
+    padding: 20px;
+    margin: 20px 0;
+}
+
 
 /**
  * Posts
