Added some stuff, Removed some stuff

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,6 +35,10 @@
           {% endif %}
         </ul>
       </div>
+      <div class="footer-col  footer-col-2"></div>
+      <div class="footer-col  footer-col-3">
+        <p><a href="/speakers/">Notes for speakers</a></p>
+      </div>
     </div>
 
   </div>
